--- a/week5/pug-template/package.json
+++ b/week5/pug-template/package.json
@@ -1,13 +1,9 @@
-
-
 {
-
   "name": "pug-template",
-
   "author": "Michelle Nesbitt",
-
   "private": true,
-
-  "dependencies": { }
-
+  "dependencies": {
+    "express": "^4.17.1",
+    "pug": "^3.0.0"
+  }
 }
